add search query pagination, documentation and fix error listener
