# docs/openapi.yaml
@@ -4,6 +4,91 @@ info:
     description: API for user management in the system.
     version: 1.0.0
 paths:
+    /search:
+        get:
+            summary: Search events
+            description: Search for events based on specified criteria.
+            parameters:
+                -   name: starts_at
+                    in: query
+                    required: true
+                    schema:
+                        type: string
+                        format: date-time
+                    description: The start date and time to filter events.
+                -   name: ends_at
+                    in: query
+                    required: true
+                    schema:
+                        type: string
+                        format: date-time
+                    description: The end date and time to filter events.
+                -   name: items_per_page
+                    in: query
+                    required: false
+                    schema:
+                        type: integer
+                        minimum: 1
+                    description: Number of items per page.
+                -   name: page
+                    in: query
+                    required: false
+                    schema:
+                        type: integer
+                        minimum: 1
+                    description: Page number to retrieve.
+            responses:
+                '200':
+                    description: Successful response with events data.
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    data:
+                                        type: object
+                                        properties:
+                                            events:
+                                                type: array
+                                                items:
+                                                    $ref: '#/components/schemas/EventProjection'
+                                    error:
+                                        type: string
+                                        nullable: true
+                '400':
+                    description: Invalid request parameters.
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            code:
+                                                type: integer
+                                            message:
+                                                type: string
+                                    data:
+                                        type: object
+                                        nullable: true
+                '500':
+                    description: Generic error
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    error:
+                                        type: object
+                                        properties:
+                                            code:
+                                                type: string
+                                            message:
+                                                type: string
+                                    data:
+                                        type: object
+                                        nullable: true
     /v1/events/{id}:
         get:
             summary: Retrieve event by ID
@@ -197,7 +282,32 @@ components:
                     type: string
                 role:
                     type: string
-
+        EventProjection:
+            type: object
+            properties:
+                id:
+                    type: string
+                    format: uuid
+                title:
+                    type: string
+                start_date:
+                    type: string
+                    format: date
+                start_time:
+                    type: string
+                    format: time
+                end_date:
+                    type: string
+                    format: date
+                end_time:
+                    type: string
+                    format: time
+                min_price:
+                    type: number
+                    format: float
+                max_price:
+                    type: number
+                    format: float
         Event:
             type: object
             properties:
